--- a/app/styles/custom-utilities/_spacing.scss
+++ b/app/styles/custom-utilities/_spacing.scss
@@ -1,7 +1,15 @@
 /* ==========================================================================
-	 Utilities: Padding
+	 Utilities: spacing
 	 ========================================================================== */
 
 .vlc-u-padding-bottom-5 {
    padding-bottom: 0.5rem !important;
  }
+
+.vlc-u-no-padding {
+  padding: 0 !important;
+}
+
+.vlc-u-no-margin {
+  margin: 0 !important;
+}
